crates/ds4-sys/src/lib.rs


    pub fn ds4_bridge_session_sync_cb(
        s: *mut ds4_bridge_session,
        tokens: *const i32,
        n_tokens: c_int,
        progress: ds4_bridge_prefill_fn,
        ud: *mut c_void,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_eval(
        s: *mut ds4_bridge_session,
        token: i32,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_eval_speculative_argmax(
        s: *mut ds4_bridge_session,
        first_token: i32,
        max_tokens: i32,
        eos_token: i32,
        accepted: *mut i32,
        accepted_cap: i32,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_eval_layer_slice(
        s: *mut ds4_bridge_session,
        tokens: *const i32,
        n_tokens: u32,
        pos0: u32,
        layer_start: u32,
        layer_end: u32,
        input_hc: *const f32,
        output_hc: *mut f32,
        output_logits: i32,
        logits: *mut f32,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_layer_slice_reset(
        s: *mut ds4_bridge_session,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_argmax(s: *mut ds4_bridge_session) -> c_int;

    pub fn ds4_bridge_session_argmax_excluding(
        s: *mut ds4_bridge_session,
        excluded_id: i32,
    ) -> c_int;

    pub fn ds4_bridge_session_pos(s: *mut ds4_bridge_session) -> c_int;

    pub fn ds4_bridge_session_ctx(s: *mut ds4_bridge_session) -> c_int;

    pub fn ds4_bridge_session_graph_pending(s: *mut ds4_bridge_session) -> c_int;

    pub fn ds4_bridge_session_power(s: *mut ds4_bridge_session) -> c_int;

    pub fn ds4_bridge_session_set_power(s: *mut ds4_bridge_session, power_percent: c_int) -> c_int;

    pub fn ds4_bridge_session_rewind(s: *mut ds4_bridge_session, pos: c_int);

    pub fn ds4_bridge_session_invalidate(s: *mut ds4_bridge_session);

    pub fn ds4_bridge_session_generation(s: *mut ds4_bridge_session) -> u64;

    pub fn ds4_bridge_session_prefill_cap(s: *mut ds4_bridge_session) -> c_int;

    pub fn ds4_bridge_session_exaone_rewind_span(s: *mut ds4_bridge_session) -> c_int;

    pub fn ds4_bridge_session_distributed_route_ready(
        s: *mut ds4_bridge_session,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_sample(
        s: *mut ds4_bridge_session,
        temperature: c_float,
        top_k: c_int,
        top_p: c_float,
        min_p: c_float,
        rng: *mut u64,
    ) -> c_int;

    pub fn ds4_bridge_session_save_payload(
        s: *mut ds4_bridge_session,
        path: *const c_char,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_load_payload(
        s: *mut ds4_bridge_session,
        path: *const c_char,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_load_payload_range(
        s: *mut ds4_bridge_session,
        path: *const c_char,
        offset: u64,
        length: u64,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_save_layer_payload(
        s: *mut ds4_bridge_session,
        path: *const c_char,
        layer_start: u32,
        layer_end: u32,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_load_layer_payload(
        s: *mut ds4_bridge_session,
        path: *const c_char,
        payload_bytes: u64,
        tokens: *const i32,
        n_tokens: u32,
        layer_start: u32,
        layer_end: u32,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_snapshot_create(
        out: *mut *mut ds4_bridge_snapshot,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_snapshot_free(snap: *mut ds4_bridge_snapshot);

    pub fn ds4_bridge_snapshot_len(snap: *const ds4_bridge_snapshot) -> u64;

    pub fn ds4_bridge_session_save_snapshot(
        s: *mut ds4_bridge_session,
        snap: *mut ds4_bridge_snapshot,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_load_snapshot(
        s: *mut ds4_bridge_session,
        snap: *const ds4_bridge_snapshot,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_tokenize_text(
        m: *mut ds4_bridge_model,
        text: *const c_char,
        out: *mut i32,
        cap: c_int,
        n_out: *mut c_int,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_tokenize_rendered_chat(
        m: *mut ds4_bridge_model,
        text: *const c_char,
        out: *mut i32,
        cap: c_int,
        n_out: *mut c_int,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_token_text(
        m: *mut ds4_bridge_model,
        token: i32,
        out: *mut c_char,
        cap: usize,
        n_out: *mut usize,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_token_eos(m: *mut ds4_bridge_model) -> c_int;

    pub fn ds4_bridge_token_is_stop(m: *mut ds4_bridge_model, token: i32) -> c_int;

    pub fn ds4_bridge_model_id(m: *mut ds4_bridge_model) -> c_int;

    pub fn ds4_bridge_model_routed_quant_bits(m: *mut ds4_bridge_model) -> c_int;

    pub fn ds4_bridge_session_graph_fit_quote(
        m: *mut ds4_bridge_model,
        ctx_size: c_int,
        q: *mut ds4_bridge_graph_fit_quote,
    ) -> c_int;

    pub fn ds4_bridge_encode_chat_prompt(
        m: *mut ds4_bridge_model,
        system: *const c_char,
        prompt: *const c_char,
        think_mode: c_int,
        out: *mut i32,
        cap: c_int,
        n_out: *mut c_int,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_copy_logits(
        s: *mut ds4_bridge_session,
        out: *mut c_float,
        cap: c_int,
    ) -> c_int;

    pub fn ds4_bridge_session_output_head_bench(
        s: *mut ds4_bridge_session,
        iters: c_int,
        path: *const c_char,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_session_top_logprobs(
        s: *mut ds4_bridge_session,
        out: *mut ds4_bridge_token_score,
        k: c_int,
    ) -> c_int;

    pub fn ds4_bridge_mem_census_snap(out: *mut ds4_bridge_mem_census) -> c_int;

    pub fn ds4_bridge_mem_observe_snap(out: *mut ds4_bridge_mem_observe) -> c_int;

    pub fn ds4_bridge_mem_substrate_outstanding() -> u64;

    pub fn ds4_bridge_qwen_image_probe(
        data: *const u8,
        data_len: usize,
        info: *mut ds4_bridge_qwen_image_info,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_qwen_image_pixel_hash(
        data: *const u8,
        data_len: usize,
        hash: *mut u64,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_batch_ctx_create_fit(
        m: *mut ds4_bridge_model,
        ctx_size: c_int,
        max_seq: c_int,
        max_total_tokens: c_int,
        out: *mut *mut ds4_bridge_batch_ctx,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_batch_ctx_destroy(c: *mut ds4_bridge_batch_ctx);

    pub fn ds4_bridge_batch_ctx_max_seq(c: *mut ds4_bridge_batch_ctx) -> c_int;

    pub fn ds4_bridge_batch_ctx_raw_cap(c: *mut ds4_bridge_batch_ctx) -> c_int;

    pub fn ds4_bridge_batch_ctx_seq_cap(c: *mut ds4_bridge_batch_ctx) -> c_int;

    pub fn ds4_bridge_batch_ctx_supports_partial_reuse(c: *mut ds4_bridge_batch_ctx) -> c_int;

    pub fn ds4_bridge_batch_ctx_trim_free(c: *mut ds4_bridge_batch_ctx, want_bytes: u64) -> u64;

    pub fn ds4_bridge_batch_ctx_generate_static(
        c: *mut ds4_bridge_batch_ctx,
        prompt_tokens: *const *const i32,
        prompt_lengths: *const i32,
        max_new_tokens: *const i32,
        eos_ids: *const i32,
        n: i32,
        out_tokens: *mut i32,
        out_tokens_cap: i32,
        out_lengths: *mut i32,
        out_finish: *mut i32,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_batch_ctx_bank_snapshot(
        c: *mut ds4_bridge_batch_ctx,
        bank: i32,
        tokens: *mut i32,
        cap: i32,
        n_tokens: *mut i32,
        generation: *mut u64,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_batch_ctx_bank_save_payload(
        c: *mut ds4_bridge_batch_ctx,
        bank: i32,
        path: *const c_char,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_batch_ctx_bank_load_payload_range(
        c: *mut ds4_bridge_batch_ctx,
        bank: i32,
        path: *const c_char,
        offset: u64,
        length: u64,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;

    pub fn ds4_bridge_continuous_generate(
        c: *mut ds4_bridge_batch_ctx,
        admit: Option<unsafe extern "C" fn(*mut c_void, *mut ds4_bridge_cont_request) -> c_int>,
        on_token: Option<unsafe extern "C" fn(*mut c_void, *mut c_void, i32) -> c_int>,
        on_done: Option<
            unsafe extern "C" fn(
                *mut c_void,
                *mut c_void,
                *const i32,
                i32,
                i32,
                *const ds4_bridge_cont_stats,
            ),
        >,
        ud: *mut c_void,
        err: *mut c_char,
        errlen: usize,
    ) -> c_int;
}

#[repr(C)]
#[derive(Clone, Copy, Default)]
pub struct ds4_bridge_cont_stats {
    pub decode_ms: f64,
    pub decode_tokens: u32,
    pub decode_steps: u32,
}

#[repr(C)]
#[derive(Clone, Copy)]
pub struct ds4_bridge_cont_request {
    pub tokens: *const i32,
    pub n: i32,
    pub images: [ds4_bridge_qwen_image_input; 4],
    pub image_count: u32,
    pub max_new: i32,
    pub eos: i32,
    pub user: *mut c_void,
    pub temperature: c_float,
    pub top_k: i32,
    pub top_p: c_float,
    pub min_p: c_float,
    pub seed: u64,
    pub sample_override: Option<unsafe extern "C" fn(*mut c_void, *mut c_void) -> c_int>,
    pub alive: Option<unsafe extern "C" fn(*mut c_void, *mut c_void) -> c_int>,
    pub on_admitted:
        Option<unsafe extern "C" fn(*mut c_void, *mut c_void, c_int, c_int, c_int) -> c_int>,
    pub place_bank: i32,
    pub n_cached: i32,
    pub bank_used: *mut i32,
    pub fork_bank: i32,
}

#[cfg(all(test, unix))]
mod socket_tests {
    use super::set_socket_send_buffer;
    use std::net::{TcpListener, TcpStream};
    use std::os::fd::AsRawFd;

    #[test]
    fn send_buffer_adapter_accepts_a_connected_socket() {
        let listener = TcpListener::bind("127.0.0.1:0").unwrap();
        let client = TcpStream::connect(listener.local_addr().unwrap()).unwrap();
        let (server, _) = listener.accept().unwrap();

        set_socket_send_buffer(&server, 32 * 1024).unwrap();
        let mut actual = 0i32;
        let mut len = std::mem::size_of::<i32>() as libc::socklen_t;
        let rc = unsafe {
            libc::getsockopt(
                server.as_raw_fd(),
                libc::SOL_SOCKET,
                libc::SO_SNDBUF,
                (&mut actual as *mut i32).cast(),
                &mut len,
            )
        };
        assert_eq!(rc, 0);
        assert!(actual >= 32 * 1024, "SO_SNDBUF={actual}");
        drop(client);
    }
}
